--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,20 @@
 APP_SECRET=
+
+# Application
+APP_API_URL=http://localhost:3333
 APP_WEB_URL=http://localhost:3000
+
+# Amazon Secrets
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
+
+# Amazon S3 Storage
+STORAGE_DRIVER=disk
+
+# Amazon SES OR Ethereal
+MAIL_DRIVER=ethereal
